# ccds_2

./: LICENSE  Makefile  README.md  pyproject.toml
ccds_2/: __init__.py  dataset.py  features.py  plots.py
ccds_2/modeling/: predict.py  train.py
docs/: mkdocs.yml  reflection.txt  todo.txt
docs/docs/: index.md
notebooks/: 0.01-rc-small_data_analysis_and_visualization .ipynb
