[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ccds_2"
version = "0.0.1"
description = "This is a major assignment deliverable with the purpose to provide training on cloud service storage access, data science project templating, and version controlling."
authors = [
  { name = "Roydan Cruz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ccds_2"]
include = ["pyproject.toml", "ccds_2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ccds_2"]
force-sort-within-sections = true

